Prod-EU/force-app/main/default/objects/Order_Event_Setting__mdt/Order_Event_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Order Event Setting</label>
    <pluralLabel>Order Event Settings</pluralLabel>
</CustomObject>