Prod-EU/force-app/main/default/objects/Order_Event_Setting__mdt/fields/EBS_ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>EBS_ORDER_TYPE__c</fullName>
    <label>EBS ORDER TYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>