Prod-EU/force-app/main/default/objects/Order_Event_Setting__mdt/fields/FUSION_ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>FUSION_ORDER_TYPE__c</fullName>
    <label>FUSION ORDER TYPE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>