Prod-EU/force-app/main/default/objects/Order_Event_Setting__mdt/fields/SFDC_ORDER_TYPE__c.field-meta.xml
<CustomField>
    <fullName>SFDC_ORDER_TYPE__c</fullName>
    <label>SFDC ORDER TYPE</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>